<resources>
    <string name="app_name">Akiba</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">username@email.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_depositmoney">Deposit Money</string>
    <string name="menu_payloan">Pay loan</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_borrowloan">Borrow Loan</string>
    <string name="menu_logout">Logout</string>
</resources>
