<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.akiba.ui.Home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_depositmoney"
        android:name="com.example.akiba.ui.DepositMoney.DepositMoneyFragment"
        android:label="@string/menu_depositmoney"
        tools:layout="@layout/fragment_depositmoney" />

    <fragment
        android:id="@+id/nav_payloan"
        android:name="com.example.akiba.ui.PayLoan.PayLoanFragment"
        android:label="@string/menu_payloan"
        tools:layout="@layout/fragment_payloan" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.example.akiba.ui.Notifications.NotificationsFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_borrowloan"
        android:name="com.example.akiba.ui.BorrowLoan.BorrowLoanFragment"
        android:label="@string/menu_borrowloan"
        tools:layout="@layout/fragment_borrowloan" />
</navigation>